examples/test/testpolicy968.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy968
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key0: value8
      key22: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value11
          key38: value13
      podSelector:
        matchLabels:
          key6: value2
          key26: value43
          key27: value1
